--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "screenrecorder",
   "version": "1.0.0",
   "description": "Screen recording script",
-  "main": "main.js",
+  "main": "screenRecorder.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron ."
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/ConteDeStGermain/screenRecorder#readme",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "moment": "^2.29.4",
     "puppeteer": "^21.7.0",
     "puppeteer-extra": "^3.3.6",
